<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment"
    app:startDestination="@id/menuItems">
    <fragment
        android:id="@+id/menuItems"
        android:name="hr.algebra.ark.fragments.CreaturesFragment"
        android:label="@string/creatures"
        tools:layout="@layout/fragment_creatures" />
    <fragment
        android:id="@+id/menuAbout"
        android:name="hr.algebra.ark.fragments.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/menuNews"
        android:name="hr.algebra.ark.fragments.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/menuFavourite"
        android:name="hr.algebra.ark.fragments.FavouriteFragment"
        android:label="@string/favouriteNav"
        tools:layout="@layout/fragment_favourite" />

</navigation>