<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dinoPadding">

        <ImageView
            android:id="@+id/ivDinoImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ivSplashHeight"
            tools:src="@drawable/magmasaur" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/creature_name"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCreatureName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="@string/creature_name" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/groupType"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvGroupType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="@string/groupType" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/diet"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDiet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="@string/diet" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temperament"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTemperament"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="@string/temperament" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivDinoIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/ivPaddingTop"
            android:paddingBottom="@dimen/ivPaddingBottom"
            android:src="@drawable/iconfavouriteno" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:text="@string/aboutCreature"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:text="@string/favourite"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivDinoFavIcon"
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/ivPaddingTop"
                android:paddingBottom="@dimen/ivPaddingBottom"
                android:layout_marginBottom="@dimen/ivDinoFavIconPaddBottom"
                android:src="@drawable/iconfavouriteno" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvAboutCreature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/tvPaddingAll"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="@string/aboutCreature" />
    </LinearLayout>

</ScrollView>